--- a/Runtime/UIComponents.Runtime.asmdef
+++ b/Runtime/UIComponents.Runtime.asmdef
@@ -1,11 +1,12 @@
 {
     "name": "UIComponents.Runtime",
-    "rootNamespace": "",
+    "rootNamespace": "UIComponents",
     "references": [
         "GUID:2bafac87e7f4b9b418d9448d219b01ab",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:15fc0a57446b3144c949da3e2b9737a9",
         "GUID:df380645f10b7bc4b97d4f5eb6303d95",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:0c752da273b17c547ae705acf0f2adf2"
     ],
     "includePlatforms": [],
