--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "UI Components",
   "author": "Quin Henshaw",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "name": "com.qhenshaw.uicomponents",
   "documentationUrl": "https://github.com/qhenshaw/UIComponents",
   "changelogUrl": "https://github.com/qhenshaw/UIComponents/blob/main/CHANGELOG.md",
@@ -13,5 +13,11 @@
 	"com.unity.ugui": "1.0.0",
 	"com.unity.render-pipelines.universal": "12.1.7",
 	"com.unity.render-pipelines.core": "12.1.7"
-  }
+  },
+  "samples": [
+	{
+      "displayName": "Main Menu and Gameplay",
+      "description": "Main Menu and Gameplay sample scenes with pause and settings sliders. Make sure scenes are added to build settings.",
+      "path": "Samples~/MainMenu"
+    }
 }
