--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "displayName": "UI Components",
   "author": "Quin Henshaw",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "name": "com.qhenshaw.uicomponents",
   "documentationUrl": "https://github.com/qhenshaw/UIComponents",
   "changelogUrl": "https://github.com/qhenshaw/UIComponents/blob/main/CHANGELOG.md",
   "licensesUrl": "https://github.com/qhenshaw/UIComponents/blob/main/LICENSE.md",
   "description": "Additional UI components useful for building Unity menus and settings windows.",
-  "unity": "2020.1",
+  "unity": "2021.3",
   "dependencies": {
-    "com.unity.inputsystem": "1.3.0",
-	"com.unity.ugui": "1.0.0",
-	"com.unity.render-pipelines.universal": "12.1.7",
-	"com.unity.render-pipelines.core": "12.1.7"
+    "com.unity.inputsystem": "1.x.x",
+	"com.unity.ugui": "1.x.x",
+	"com.unity.render-pipelines.universal": "12.x.x"
   },
   "samples": [
 	{
