--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "unity": "2021.3",
   "dependencies": {
     "com.unity.inputsystem": "1.4.4",
-	"com.unity.ugui": "1.0.0",
-	"com.unity.render-pipelines.universal": "12.1.7"
+	"com.unity.ugui": "1.0.0"
   },
   "samples": [
 	{
